# near-laugh

./: CMakeLists.txt  Makefile  README.md
resources/shaders/: triangle_vertex.glsl  triangle_vertex.spv
src/: main.cpp
src/core/: application.cpp  application.hpp
src/core/render/: basic_renderer.cpp  basic_renderer.hpp  graphics_pipeline.cpp  graphics_pipeline.hpp  renderer.cpp  renderer.hpp
src/core/resources/: shader_provider.hpp
tests/: CMakeLists.txt
tests/core/: test_application.cpp
